crates/rstest-bdd/tests/ui_macros/datatable_duplicate_attr.stderr
error: invalid step function signature: duplicate `#[datatable]` attribute

         = help: Use `#[given] fn name(...args...)` with supported step arguments/fixtures (step attributes include `#[given]`, `#[when]`, and `#[then]`); remove `self` if present.

 --> tests/ui_macros/datatable_duplicate_attr.rs:6:35
  |
6 | fn step(#[datatable] #[datatable] table: Vec<Vec<String>>) {}
  |                                   ^^^^^
